@@ -1,4 +1,4 @@
-/*	$NetBSD: trap.c,v 1.90 2017/02/14 09:11:05 maxv Exp $	*/
+/*	$NetBSD: trap.c,v 1.91 2017/02/17 01:14:31 kamil Exp $	*/
 
 /*-
  * Copyright (c) 1998, 2000 The NetBSD Foundation, Inc.
@@ -68,7 +68,7 @@
  */
 
 #include <sys/cdefs.h>
-__KERNEL_RCSID(0, "$NetBSD: trap.c,v 1.90 2017/02/14 09:11:05 maxv Exp $");
+__KERNEL_RCSID(0, "$NetBSD: trap.c,v 1.91 2017/02/17 01:14:31 kamil Exp $");
 
 #include "opt_ddb.h"
 #include "opt_kgdb.h"
@@ -711,7 +711,7 @@ faultcommon:
 			ksi.ksi_signo = SIGTRAP;
 			ksi.ksi_trap = type & ~T_USER;
 			if ((wptnfo = user_trap_x86_hw_watchpoint())) {
-				ksi.ksi_code = TRAP_HWWPT;
+				ksi.ksi_code = TRAP_DBREG;
 				ksi.ksi_trap2 = x86_hw_watchpoint_reg(wptnfo);
 				ksi.ksi_trap3 = x86_hw_watchpoint_type(wptnfo);
 			} else if (type == (T_BPTFLT|T_USER))
